Thu, 10 Jul 2008 23:54:57 +0200 <thp@perli.net>
Update list of donators

	* src/gpodder/gui.py: Update list of donators

Thu, 10 Jul 2008 23:49:12 +0200 <thp@perli.net>
Don't warn the user when timestamp is None

	* src/gpodder/util.py: Don't warn the user when timestamp is None in
	gpodder.util.format_date; Thanks to Bernd Schlapsi for reporting this
	bug (Closes: http://bugs.gpodder.org/show_bug.cgi?id=148)

Wed, 09 Jul 2008 12:19:26 +0200 <thp@perli.net>
Simply advanced configuration editor, implement usability suggestions

	* data/gpodder.glade: Implement usability suggestions from
	http://gpodder.org/files/user_test_2008-05.pdf: Rename "Player" tab in
	preferences to "Device"; change "Filter:" to "Search for:" in advanced
	configuration editor
	* src/gpodder/config.py: Support code for changes in the advanced
	configuration editor dialog (model)
	* src/gpodder/gui.py: Modify the advanced configuration editor to have
	check boxes for boolean values, remove the "Type" column and rename
	the columns as suggested by the May 2008 user test; use italic font
	instead of bold for values set to something other than the default

Tue, 08 Jul 2008 21:25:24 -0400 <me@nikosapi.org>
Merge check free space before syncing patch

	* src/gpodder/gui.py: Display a dialog box informing the user in the
	event that there is insufficient free space on their device before
	syncing begins.
	* src/gpodder/sync.py: Added Device.tracks_list which is populated by
	Device.get_all_tracks() when Device.open() is called. 
	Added Device.episode_on_device(episode)
	Added Device.get_free_space()

Tue, 08 Jul 2008 21:10:48 -0400 <me@nikosapi.org>
Small bugfixes

	* src/gpodder/gui.py: for bluetooth file transfer make sure
	episode.sync_filename()	doesn't contain any troublesome characters
	eg. some episodes include / in the title
	* src/gpodder/libpodcasts.py: comment out mimetype logging, it gets
	annoying after a while...
	* src/gpodder/util.py: remove "path = os.path.dirname(path)" from