@@ -1,3 +1,9 @@
+Fri, 11 Jul 2008 13:09:55 -0400 <me@nikosapi.org>
+Update podcast tab title when adding or removing channels
+
+	* src/gpodder/gui.py: Add update_podcasts_tab() and call it when a
+	channel is added or removed
+
 Thu, 10 Jul 2008 23:54:57 +0200 <thp@perli.net>
 Update list of donators
 
